# HanArchive

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes_documents.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/crud/: crud_document.py
backend/app/db/: base.py  session.py
backend/app/models/: analysis.py  document.py  embedding.py  entity.py  event.py  location.py  models.py  person.py  project.py  text.py  token.py  user.py
backend/app/schemas/: analysis.py  auth.py  document.py
docker/: backend.Dockerfile  docker-compose.yml
