[project]
name = "hanarchive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "fastapi[standard]>=0.139.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
